# kairos

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/plans/: 2026-05-27-kairos-design.md
examples/: custom_strategy.py
notebooks/: 01_kairos_quickstart.ipynb
src/kairos/: __init__.py  __main__.py
src/kairos/agents/: __init__.py  base.py  executor.py  quant.py  research.py  risk.py  sentiment.py
src/kairos/backtesting/: __init__.py  engine.py  metrics.py  multiframe.py  optimizer.py  portfolio.py  splitter.py
src/kairos/brokers/: __init__.py  alpaca.py
src/kairos/cli/: __init__.py  app.py
src/kairos/core/: __init__.py  config.py  journal.py  orchestrator.py
src/kairos/dashboard/: __init__.py  app.py
src/kairos/data/: __init__.py  cache.py  mock.py
src/kairos/data/providers/: __init__.py  base.py  birdeye.py  cached.py  coingecko.py  dexscreener.py  fred.py  yahoofinance.py
src/kairos/indicators/: __init__.py  ta.py
src/kairos/notifications/: __init__.py  base.py  console.py  webhook.py
src/kairos/reports/: __init__.py  html_report.py
src/kairos/risk/: __init__.py
src/kairos/statistics/: __init__.py  bootstrap.py
src/kairos/strategies/: __init__.py  base.py  builtin.py  registry.py
tests/: test_agent_base.py  test_birdeye_provider.py  test_bootstrap.py  test_broker.py  test_cache.py  test_cli.py  test_coingecko_provider.py  test_config.py  test_dexscreener_provider.py  test_engine.py  test_engine_precompute.py  test_executor_agent.py  test_fred_provider.py  test_html_report.py  test_journal.py  test_main_module.py  test_metrics.py  test_mock_data.py  test_notifications.py  test_optimizer.py  test_orchestrator.py  test_package.py  test_portfolio.py  test_quant_agent.py  test_research_agent.py  test_risk_agent.py  test_sentiment_agent.py  test_splitter.py  test_strategies.py  test_strategy_library.py  test_strategy_plugin.py  test_ta.py  test_walkforward_optimization.py  test_yahoofinance_provider.py
