[tool.poetry]
name = "kairos"
version = "0.1.0"
description = "AI Trading Agents, Fully Transparent & Verifiable"
authors = ["Derick Hu"]
license = "MIT"
readme = "README.md"
packages = [{include = "kairos", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
typer = ">=0.9"
pydantic = ">=2.0"
pandas = ">=2.0"
numpy = ">=1.24"
python-dotenv = ">=1.0"
rich = ">=13.0"
streamlit = "^1.57.0"
httpx = "^0.28.1"
scipy = ">=1.10"
statsmodels = ">=0.14"
yfinance = "^1.4.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-asyncio = ">=0.23"
pytest-cov = ">=4.0"
ruff = ">=0.1"
mypy = ">=1.0"
pre-commit = ">=3.0"

[tool.poetry.extras]
ta = ["pandas-ta"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kairos = "kairos.cli.app:app"

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
