[tool.poetry]
name = "kairos-agent"
version = "0.1.0"
description = "AI Trading Agents, Fully Transparent & Verifiable — Research-grade agents for stocks, ETFs, and crypto with Walk-Forward backtesting, Bootstrap statistics, and Strategy Plugin system."
authors = ["Zhou Yuchen"]
license = "MIT"
readme = "README.md"
packages = [{include = "kairos", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
typer = ">=0.9"
pydantic = ">=2.0"
pandas = ">=2.0"
numpy = ">=1.24"
python-dotenv = ">=1.0"
rich = ">=13.0"
streamlit = ">=1.30"
httpx = ">=0.27"
yfinance = ">=1.4"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-asyncio = ">=0.23"
pytest-cov = ">=4.0"
ruff = ">=0.1"
mypy = ">=1.0"
pre-commit = ">=3.0"

[tool.poetry.extras]
ta = ["pandas-ta"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kairos = "kairos.cli.app:app"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.coverage.run]
# Presentation, entrypoint, and live-IO layers are exercised via manual /
# integration testing rather than unit tests, so they are excluded from the
# unit-coverage gate. Core logic (agents, backtesting, strategies, statistics,
# indicators, data mock/base) remains fully measured.
omit = [
    "*/dashboard/*",
    "*/cli/*",
    "*/__main__.py",
    "*/reports/html_report.py",
    "*/data/providers/yahoofinance.py",
    "*/data/providers/fred.py",
]

[tool.coverage.report]
show_missing = true
