[tool.poetry]
name = "kairos-agent"
version = "0.1.0"
description = "AI Trading Agents, Fully Transparent & Verifiable — Research-grade agents for stocks, ETFs, and crypto with Walk-Forward backtesting, Bootstrap statistics, and Strategy Plugin system."
authors = ["Zhou Yuchen"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Electricitysheep/kairos"
repository = "https://github.com/Electricitysheep/kairos"
documentation = "https://github.com/Electricitysheep/kairos#readme"
keywords = [
    "trading",
    "quant",
    "backtesting",
    "ai-agents",
    "algorithmic-trading",
    "crypto",
    "llm",
    "fintech",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
packages = [{include = "kairos", from = "src"}]

[tool.poetry.urls]
Changelog = "https://github.com/Electricitysheep/kairos/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/Electricitysheep/kairos/issues"

[tool.poetry.dependencies]
python = ">=3.10"
typer = ">=0.27.0"
pydantic = ">=2.0"
pandas = ">=2.0"
numpy = ">=1.24"
python-dotenv = ">=1.0"
rich = ">=13.0"
streamlit = ">=1.58.0"
httpx = ">=0.27"
yfinance = ">=1.5.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.1.1"
pytest-asyncio = ">=0.23"
pytest-cov = ">=4.0"
ruff = ">=0.15.20"
mypy = ">=1.0"
pre-commit = ">=3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kairos = "kairos.cli.app:app"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.coverage.run]
# Only the Streamlit dashboard (a UI layer exercised manually rather than via
# unit tests) is excluded from the coverage gate. Everything else — including
# the CLI, data providers, and report generation — is measured.
omit = [
    "*/dashboard/*",
]

[tool.coverage.report]
show_missing = true
